# python-poetry-bootstrap

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
docs/: index.rst
tests/: test_config.py  test_poetry_config.py
